src/test/deca/context/valid/test_negation.deca
// Description:
//    operation de negation
//
// Resultats:
//    state1 = false
//
// Historique:
//    cree le 01/01/2024

{
   boolean state = true ;
   boolean state1 = (!state);
}
