src/test/deca/context/invalid/wobj/test_opbool_float.deca
// Description:
//    Declaration
//
// Resultats:
//    Ligne 11: operation de compraison impossible avec ces types
//
// Historique:
//    cree le 01/01/2024

{
   boolean state1 = true ;
   int state2 = 12;

   boolean state = (state1 == state2);

}
